--- a/examples/nginx/nginx.conf
+++ b/examples/nginx/nginx.conf
@@ -30,7 +30,7 @@ http {
         }
 
         location /connection/websocket {
-            proxy_pass http://127.0.0.1:8000;
+            proxy_pass http://localhost:8000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
