--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,8 +26,8 @@ ignored = [
 ]
 
 [[constraint]]
-  branch = "master"
   name = "github.com/FZambia/sentinel"
+  version = "1.0.0"
 
 [[constraint]]
   name = "github.com/gomodule/redigo"
