--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -55,7 +55,7 @@ ignored = [
 
 [[constraint]]
   name = "github.com/satori/go.uuid"
-  version = "1.2.0"
+  branch = "master"
 
 [[constraint]]
   name = "github.com/stretchr/testify"
