exclude examples from travis tests, small code style improvements

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ install:
 
 script:
   # - gometalinter -t --vendor ./...
-  - go test -v -race -tags integration ./...
+  - go test -v -race -tags integration $(go list ./... | grep -v /examples/)
