--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -36,7 +36,7 @@ ignored = ["github.com/centrifugal/centrifuge/examples*"]
 
 [[constraint]]
   name = "github.com/gorilla/websocket"
-  version = ">=1.2.0"
+  version = "1.4.0"
 
 [[constraint]]
   name = "github.com/igm/sockjs-go"
