--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -57,3 +57,7 @@ ignored = ["github.com/centrifugal/centrifuge/examples*"]
 [[constraint]]
   name = "github.com/FZambia/eagle"
   version = "0.0.1"
+
+[[constraint]]
+  name = "github.com/centrifugal/protocol"
+  version = "0.1.0"
