--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -31,6 +31,10 @@ ignored = ["github.com/centrifugal/centrifuge/examples*"]
   version = "2.0.0"
 
 [[constraint]]
+  name = "github.com/mna/redisc"
+  version = "1.1.7"
+
+[[constraint]]
   name = "github.com/gogo/protobuf"
   version = "1.3.1"
 
