--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -40,7 +40,7 @@ ignored = ["github.com/centrifugal/centrifuge/examples*"]
 
 [[constraint]]
   name = "github.com/gorilla/websocket"
-  version = "1.4.1"
+  version = "1.4.2"
 
 [[constraint]]
   name = "github.com/igm/sockjs-go"
@@ -65,3 +65,7 @@ ignored = ["github.com/centrifugal/centrifuge/examples*"]
 [[constraint]]
   name = "github.com/centrifugal/protocol"
   version = "0.2.0"
+
+[[constraint]]
+  name = "github.com/google/uuid"
+  version = "1.1.1"
