--- a/.codecov.yml
+++ b/.codecov.yml
@@ -6,3 +6,6 @@ coverage:
     patch: off
 ignore:
   - "internal/controlpb/control*"  # generated code
+  - "emulation.go" # experimental code
+  - "handler_http_stream.go" # experimental code
+  - "handler_sse.go" # experimental code
