--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,3 +32,11 @@ services:
       - "7000:7000"
       - "7001:7001"
       - "7002:7002"
+  keydb:
+    image: eqalpha/keydb:alpine_x86_64_v6.3.1
+    ports:
+      - "6344:6379"
+  dragonflydb:
+    image: docker.dragonflydb.io/dragonflydb/dragonfly:v0.9.1
+    ports:
+      - "6333:6379"
