--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
     if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != github.repository
     strategy:
       matrix:
-        go-version: [1.19, 1.20]
+        go-version: ["1.19", "1.20"]
         redis-version: [5, 6, 7]
     steps:
       - name: Install Go stable version
