exclude websocket package from coverage

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -7,3 +7,4 @@ coverage:
 ignore:
   - "internal/controlpb/control*"  # generated code
   - "client_experimental.go"  # experimental code
+  - "internal/websocket/*"  # embedded Gorilla WebSocket fork
