--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,8 @@ jobs:
         run: go test -v -race -tags integration -coverprofile=coverage.out $(go list ./... | grep -v /_examples/)
 
       - name: Upload code coverage to codecov
-        if: matrix.go-version == '1.22'
+        if: matrix.go-version == '1.22' && matrix.redis-version == 7
         uses: codecov/codecov-action@v4
         with:
           file: ./coverage.out
+          token: ${{ secrets.CODECOV_TOKEN }}
