--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
     strategy:
       matrix:
         go-version: ["1.21", "1.22"]
-        redis-version: [5, 6, 7]
+        redis-version: [6, 7]
     steps:
       - name: Install Go stable version
         uses: actions/setup-go@v5
