--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,26 +5,6 @@ services:
     image: redis:${REDIS_VERSION:-7}-alpine
     ports:
       - "6379:6379"
-  valkey:
-    image: valkey/valkey:${VALKEY_VERSION:-8}-alpine
-    ports:
-      - "8379:6379"
-  dragonflydb:
-    image: docker.dragonflydb.io/dragonflydb/dragonfly:v1.19.0
-    ports:
-      - "7379:6379"
-  sentinel:
-    image: redis:${REDIS_VERSION:-7}-alpine
-    entrypoint:
-      - /bin/sh
-      - -c
-      - |
-        redis-server --save "" --appendonly no --port 6380 &
-        echo "sentinel monitor mymaster 127.0.0.1 6380 2\n" > sentinel.conf
-        redis-server sentinel.conf --sentinel
-    ports:
-      - "6380:6380"
-      - "26379:26379"
   cluster:
     image: redis:${REDIS_VERSION:-7}-alpine
     entrypoint:
@@ -40,6 +20,22 @@ services:
       - "7000:7000"
       - "7001:7001"
       - "7002:7002"
+  sentinel:
+    image: redis:${REDIS_VERSION:-7}-alpine
+    entrypoint:
+      - /bin/sh
+      - -c
+      - |
+        redis-server --save "" --appendonly no --port 6380 &
+        echo "sentinel monitor mymaster 127.0.0.1 6380 2\n" > sentinel.conf
+        redis-server sentinel.conf --sentinel
+    ports:
+      - "6380:6380"
+      - "26379:26379"
+  valkey:
+    image: valkey/valkey:${VALKEY_VERSION:-8}-alpine
+    ports:
+      - "8379:6379"
   valkey-cluster:
     image: valkey/valkey:${VALKEY_VERSION:-8}-alpine
     entrypoint:
@@ -55,3 +51,12 @@ services:
       - "8000:8000"
       - "8001:8001"
       - "8002:8002"
+  dragonflydb:
+    image: docker.dragonflydb.io/dragonflydb/dragonfly:v1.27.1
+    ports:
+      - "9379:6379"
+  dragonflydb-cluster:
+    image: docker.dragonflydb.io/dragonflydb/dragonfly:v1.27.1
+    ports:
+      - "9000:6379"
+    command: ["--cluster_mode", "emulated"]
