--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,8 @@ jobs:
     if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != github.repository
     strategy:
       matrix:
-        go-version: ["1.21", "1.22"]
-        redis-version: [6, 7]
+        go-version: ["1.24"]
+        redis-version: [7]
     steps:
       - name: Install Go stable version
         uses: actions/setup-go@v5
@@ -40,11 +40,6 @@ jobs:
         run: docker compose up -d --wait
 
       - name: Test
+        env:
+          GODEBUG: fips140=only
         run: go test -v -race -tags integration -coverprofile=coverage.out $(go list ./... | grep -v /_examples/)
-
-      - name: Upload code coverage to codecov
-        if: matrix.go-version == '1.22' && matrix.redis-version == 7
-        uses: codecov/codecov-action@v4
-        with:
-          file: ./coverage.out
-          token: ${{ secrets.CODECOV_TOKEN }}
