fix check errors

--- a/_examples/experimental/http2_haproxy/haproxy/haproxy.cfg
+++ b/_examples/experimental/http2_haproxy/haproxy/haproxy.cfg
@@ -50,19 +50,21 @@ backend websocket_backend
     mode http
     balance roundrobin
 
-    # Enable HTTP connection reuse - for HTTP/2 multiplexing
-    http-reuse always
+    # Use 'safe' reuse mode - allows connection reuse but not for upgraded protocols
+    # This prevents reusing connections that are already handling WebSockets
+    http-reuse safe
 
     # HTTP/2 backend servers with ALPN h2 negotiation
     # HAProxy 2.4+ automatically converts HTTP/1.1 WebSocket to HTTP/2 Extended CONNECT (RFC 8441)
     # proto h2 forces HTTP/2, sni sends correct hostname
-    server centrifuge1 centrifuge1:8443 ssl alpn h2 ca-file /certs/rootCA.pem
-    server centrifuge2 centrifuge2:8443 ssl alpn h2 ca-file /certs/rootCA.pem
-    server centrifuge3 centrifuge3:8443 ssl alpn h2 ca-file /certs/rootCA.pem
+    server centrifuge1 centrifuge1:8443 ssl proto h2 alpn h2 ca-file /certs/rootCA.pem sni str(centrifuge1) verify none check-ssl
+    server centrifuge2 centrifuge2:8443 ssl proto h2 alpn h2 ca-file /certs/rootCA.pem sni str(centrifuge2) verify none check-ssl
+    server centrifuge3 centrifuge3:8443 ssl proto h2 alpn h2 ca-file /certs/rootCA.pem sni str(centrifuge3) verify none check-ssl
 
 # Backend for static content (index.html)
 # Also use HTTP/2 since Go backend supports it
 backend static_backend
     mode http
     balance roundrobin
-    server centrifuge1 centrifuge1:8443 ssl alpn h2 ca-file /certs/rootCA.pem
+    http-reuse safe
+    server centrifuge1 centrifuge1:8443 ssl proto h2 alpn h2 ca-file /certs/rootCA.pem sni str(centrifuge1) verify none check-ssl
