--- a/_examples/experimental/http2_haproxy/haproxy/haproxy.cfg
+++ b/_examples/experimental/http2_haproxy/haproxy/haproxy.cfg
@@ -50,9 +50,12 @@ backend websocket_backend
     mode http
     balance roundrobin
 
-    # Use 'safe' reuse mode - allows connection reuse but not for upgraded protocols
-    # This prevents reusing connections that are already handling WebSockets
-    http-reuse safe
+    http-reuse never
+
+    # Timeouts for tunnel/WebSocket connections
+    timeout connect 5s
+    timeout server 3600s
+    timeout tunnel 3600s
 
     # HTTP/2 backend servers with ALPN h2 negotiation
     # HAProxy 2.4+ automatically converts HTTP/1.1 WebSocket to HTTP/2 Extended CONNECT (RFC 8441)
