--- a/_examples/experimental/http2_haproxy/haproxy/haproxy.cfg
+++ b/_examples/experimental/http2_haproxy/haproxy/haproxy.cfg
@@ -1,8 +1,6 @@
 global
     log stdout format raw local0 debug
     maxconn 4096
-    tune.ssl.default-dh-param 2048
-    # Enable HTTP/2 debugging
     tune.h2.initial-window-size 65535
     tune.h2.max-concurrent-streams 100
 
@@ -26,23 +24,24 @@ listen stats
     stats show-legends
     stats show-node
 
-# Frontend - accepts both HTTP/2 and HTTP/1.1 from clients
-# HTTP/2 for static files, HTTP/1.1 for WebSocket upgrades
-frontend websocket_frontend
-    bind *:443 ssl crt /certs/haproxy.pem alpn h2,http/1.1
+frontend main_frontend
+    # CRITICAL: Only advertise h2 in ALPN to force Chrome to use HTTP/2
+    # Chrome sometimes prefers HTTP/1.1 for WebSocket even when h2 is available
+    bind *:443 ssl crt /certs/haproxy.pem alpn h2
     mode http
 
-    # Logging
-    log-format "%ci:%cp [%tr] %ft %b/%s %TR/%Tw/%Tc/%Tr/%Ta %ST %B %CC %CS %tsc %ac/%fc/%bc/%sc/%rc %sq/%bq %hr %hs %{+Q}r"
+    # Capture headers for logging
+    capture request header :protocol len 20
+    capture request header Upgrade len 20
+    capture request header Sec-Websocket-Key len 30
 
-    # ACL to detect WebSocket upgrade
-    acl is_websocket hdr(Upgrade) -i websocket
+    log-format "CLIENT=%ci:%cp PROTO=%HV METHOD=%HM PATH=%HP :protocol=%[capture.req.hdr(0)] Upgrade=%[capture.req.hdr(1)] Sec-WS-Key=%[capture.req.hdr(2)] backend=%b/%s status=%ST"
+
+    # ACL to detect WebSocket connections
     acl is_websocket_path path_beg /connection/websocket
 
-    # Use WebSocket backend for WebSocket connections
-    use_backend websocket_backend if is_websocket is_websocket_path
-
-    # Default backend for static files (HTML)
+    use_backend websocket_backend if is_websocket_path
+    # Default to static content backend
     default_backend static_backend
 
 # Backend for WebSocket - uses HTTP/2 to Centrifuge servers
@@ -50,19 +49,17 @@ backend websocket_backend
     mode http
     balance roundrobin
 
-    http-reuse never
+    http-reuse always
 
-    # Timeouts for tunnel/WebSocket connections
+    # Timeouts for WebSocket connections
     timeout connect 5s
     timeout server 3600s
     timeout tunnel 3600s
 
-    # HTTP/2 backend servers with ALPN h2 negotiation
-    # HAProxy 2.4+ automatically converts HTTP/1.1 WebSocket to HTTP/2 Extended CONNECT (RFC 8441)
-    # proto h2 forces HTTP/2, sni sends correct hostname
-    server centrifuge1 centrifuge1:8443 ssl proto h2 alpn h2 ca-file /certs/rootCA.pem sni str(centrifuge1) verify none check-ssl
-    server centrifuge2 centrifuge2:8443 ssl proto h2 alpn h2 ca-file /certs/rootCA.pem sni str(centrifuge2) verify none check-ssl
-    server centrifuge3 centrifuge3:8443 ssl proto h2 alpn h2 ca-file /certs/rootCA.pem sni str(centrifuge3) verify none check-ssl
+    # HAProxy automatically converts HTTP/1.1 WebSocket to HTTP/2 Extended CONNECT (RFC 8441)
+    server centrifuge1 centrifuge1:8443 ssl verify none proto h2 alpn h2 sni str(centrifuge1) check-ssl
+    server centrifuge2 centrifuge2:8443 ssl verify none proto h2 alpn h2 sni str(centrifuge2) check-ssl
+    server centrifuge3 centrifuge3:8443 ssl verify none proto h2 alpn h2 sni str(centrifuge3) check-ssl
 
 # Backend for static content (index.html)
 # Also use HTTP/2 since Go backend supports it
