--- a/_examples/experimental/http2_haproxy_h2c/haproxy/haproxy.cfg
+++ b/_examples/experimental/http2_haproxy_h2c/haproxy/haproxy.cfg
@@ -57,9 +57,9 @@ backend websocket_backend
     timeout tunnel 3600s
 
     # HAProxy automatically converts HTTP/1.1 WebSocket to HTTP/2 Extended CONNECT (RFC 8441)
-    server centrifuge1 centrifuge1:8443 ssl alpn h2 ca-file /certs/rootCA.pem check-ssl
-    server centrifuge2 centrifuge2:8443 ssl alpn h2 ca-file /certs/rootCA.pem check-ssl
-    server centrifuge3 centrifuge3:8443 ssl alpn h2 ca-file /certs/rootCA.pem check-ssl
+    server centrifuge1 centrifuge1:8443 proto h2 check
+    server centrifuge2 centrifuge2:8443 proto h2 check
+    server centrifuge3 centrifuge3:8443 proto h2 check
 
 # Backend for static content (index.html)
 # Also use HTTP/2 since Go backend supports it
@@ -67,4 +67,4 @@ backend static_backend
     mode http
     balance roundrobin
     http-reuse safe
-    server centrifuge1 centrifuge1:8443 ssl alpn h2 ca-file /certs/rootCA.pem check-ssl
+    server centrifuge1 centrifuge1:8443 proto h2 check
